Titel neu gestyled

--- a/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/analysis/notebooks/data-cleansing.ipynb
+++ b/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/analysis/notebooks/data-cleansing.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:LightSlateGray;\">Data Science Project Assessment of Database Performance Degradation</span>\n",
+    "## <span style=\"color:LightSlateGray;\">Data Science Project</span>\n",
+    "# <span style=\"color:LightSlateGray;\">Assessment of Database Performance Degradation</span>\n",
     "_CAS ADS 2019/2020 University of Berne_<br/>\n",
     "_Author: Marco Bassi_, September 20, 2019"
    ]
