--- a/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/analysis/notebooks/database-load.ipynb
+++ b/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/analysis/notebooks/database-load.ipynb
@@ -48,46 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Registered S3 methods overwritten by 'ggplot2':\n",
-      "  method         from \n",
-      "  [.quosures     rlang\n",
-      "  c.quosures     rlang\n",
-      "  print.quosures rlang\n",
-      "\n",
-      "Attaching package: 'reshape2'\n",
-      "\n",
-      "The following objects are masked from 'package:data.table':\n",
-      "\n",
-      "    dcast, melt\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "'C:/Users/ue85374/data/CAS-ADS/Git.repos/CAS-Applied-Data-Science/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/data'"
-      ],
-      "text/latex": [
-       "'C:/Users/ue85374/data/CAS-ADS/Git.repos/CAS-Applied-Data-Science/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/data'"
-      ],
-      "text/markdown": [
-       "'C:/Users/ue85374/data/CAS-ADS/Git.repos/CAS-Applied-Data-Science/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/data'"
-      ],
-      "text/plain": [
-       "[1] \"C:/Users/ue85374/data/CAS-ADS/Git.repos/CAS-Applied-Data-Science/Data-Science-Project/project.1/statistiken.2019-08-22T0000-bis-2019-08-28T1000/data\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(data.table)\n",
     "library(ggplot2)\n",
@@ -526,8 +489,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <span style=\"font-style: italic; color: DarkGreen; font-size:1em;\">Null Hypothesis: The medians of the waiting classes total waiting times of the integration and production databases are equal.</span>\n",
-    "#### <span style=\"font-style: italic; color: DarkGreen; font-size:1em;\">Alternative Hypothesis: The medians are not equal</span>"
+    "#### <span style=\"font-style: italic; font-weight: 600; color: DarkGreen; font-size:1em;\">Null Hypothesis: The median of a waiting classes total waiting time of the integration and production databases are equal.</span>\n",
+    "#### <span style=\"font-style: italic; font-weight: 600; color: DarkGreen; font-size:1em;\">Alternative Hypothesis: The medians are not equal</span>"
    ]
   },
   {
@@ -814,8 +777,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <span style=\"font-style: italic; color: DarkGreen; font-size:1em;\">Null Hypothesis: The medians of the database load statistics are greater on integration than on production, or equal.</span>\n",
-    "#### <span style=\"font-style: italic; color: DarkGreen; font-size:1em;\">Alternative Hypothesis: The medians are smaller on integration than on production.</span>\n",
+    "#### <span style=\"font-style: italic; font-weight: 600; color: DarkGreen; font-size:1em;\">Null Hypothesis: The median of a databases load statistic is greater on integration than on production, or equal.</span>\n",
+    "#### <span style=\"font-style: italic; color: DarkGreen; font-weight: 600; font-size:1em;\">Alternative Hypothesis: The median is smaller on integration than on production.</span>\n",
     "For this test we compute a one-tailed Wilcoxon Rank Sum Test."
    ]
   },
@@ -961,6 +924,15 @@
    "metadata": {},
    "source": [
     "<span style=\"font-style: italic; color: LightSlateGray; font-size:1.1em;\">With a p-value of 0.1742 we can adopt the null hypothesis, and thus assume the medians are equal</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "* Cluster waiting times are much higher on the integration database than on the production database.\n",
+    "* There is no higher load on the integration database wrt. the production database, that could be taken into account to explain the difference."
    ]
   },
   {
@@ -1269,15 +1241,6 @@
     "p_uc4 + myTheme.screen\n",
     "\n",
     "ggsave(plot=p_uc4 + myTheme.plot, height=15, width=25, units=\"cm\", path=\"../analysis/plots\", filename=\"sysstat.user_calls.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusions\n",
-    "* Cluster waiting times are much higher on the integration database than on the production database.\n",
-    "* There is no higher load on the integration database wrt. the production database, that could be taken into account to explain the difference."
    ]
   }
  ],
