Added README to project root folder

--- a/Peer-Consulting-Project/analysis/notebooks/cus5130-userio.ipynb
+++ b/Peer-Consulting-Project/analysis/notebooks/cus5130-userio.ipynb
@@ -6,63 +6,34 @@
    "source": [
     "# CUS 5.13.0 User I/O Before and After Release Deployment\n",
     "\n",
-    "## Context\n",
+    "## Procedure\n",
     "\n",
-    "On May 26, 2020 version 5.13.0 of the CUS platform was released into production. This platform operates a \n",
-    "datahub for real-time data of the public transport in Switzerland.\n",
-    "It serves the customer information by various channels, e.g. the information screens\n",
-    "at railway stations or bus stops. One of the core components of this platform is the CUS database, an \n",
-    "Oracle 11.2 database appliance (ODA).\n",
+    "### Load the Data\n",
     "\n",
-    "Daily monitoring of the User I/O related database wait events seems to imply that the database user I/O has \n",
-    "increased considerably since. \n",
+    "The data is a CSV flat file; see README.md in the project root directory\n",
     "\n",
-    "The analysis' objective is to prove or disapprove this conjecture.\n",
+    "### Filter, Clean and Transform the Data\n",
     "\n",
+    "The file contains more than one hundred statistics, but just 2 of them are taken into account for the analysis:\n",
     "\n",
-    "## The Data\n",
-    "\n",
-    "The data was taken was taken from the dynamic performance view *DBA_HIST_SYSSTAT*. It is described in Oracles \n",
-    "reference documentation, found online at https://docs.oracle.com/cd/E11882_01/server.112/e40402/stats.htm#REFRN103.\n",
-    "This view contains hourly snapshots, i.e. it samples every hour the statistic values.\n",
-    "\n",
-    "For the analysis I chose the statistics \n",
     "* physical read total IO requests, and\n",
     "* physical read total bytes\n",
     "\n",
-    "The statistics values are accumulated, and taken at the end time of the snapshot. This usually is at the full hour.\n",
-    "Due to high system load, taking the snapshot might be delayed, or is skipped altogether.\n",
+    "Further, :\n",
     "\n",
-    "**N.B. 1** When the database is restarted, the statistics are reset to 0. If this happens, a statistics increment between a snapshot and its successor will be negative.\n",
-    "**N.B. 2** Due to the circumstances mentioned above, the duration of a snapshot interval might vary considerable. This has to be taken into account for the analysis.\n",
+    "* datetime fields have to be transformed into datetime objects.\n",
+    "* the duration of the snapshot intervals must be checked\n",
+    "* the statistics increment in the course of a snapshot interval must be computed\n",
+    "* the data must be checked for database restarts (resetting the statistics)\n",
     "\n",
+    "### Data Analysis\n",
     "\n",
-    "### Query\n",
+    "Split the data into 2 dataframes:\n",
     "\n",
-    "````sql\n",
-    "alter session set nls_timestamp_format = 'YYYY-MM-DD HH24:MI:SS';\n",
+    "* one for the period before release deployment (i.e. running the old release 5.12.1),\n",
+    "* and one for the period after release deployment (i.e. running the new release 5.13.0)\n",
     "\n",
-    "select begin_interval_time, end_interval_time, snap_id, instance_number,\n",
-    "  stat_name, value\n",
-    "from dba_hist_sysstat@kihubprod_link.sbb.ch\n",
-    "natural join dba_hist_snapshot@kihubprod_link.sbb.ch\n",
-    "order by begin_interval_time, instance_number, stat_name;\n",
-    "````\n",
-    "\n",
-    "### Datafile Structure\n",
-    "\n",
-    "* File name: dba-hist-sysstat.dsv\n",
-    "* Format: Text file, CSV\n",
-    "* Character set encoding scheme: UTF-8\n",
-    "* Field separator: \";\" (semicolon)\n",
-    "* First line: field names\n",
-    "* 2n line and below: records\n",
-    "* Field 1: BEGIN_INTERVAL_TIME; timestamp YYYY-MM-DD HH24:MI:SS\n",
-    "* Field 2: END_INTERVAL_TIME; timestamp YYYY-MM-DD HH24:MI:SS\n",
-    "* Field 3: SNAP_ID; snapshot ID, non-negative integer\n",
-    "* Field 4: INSTANCE_NUMBER; ID of the database instance, non-negative integer\n",
-    "* Field 5: STAT_NAME; statistics’ name\n",
-    "* Field 6: VALUE; statistics’ value, integer"
+    "Compare the data"
    ]
   },
   {
@@ -74,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +198,7 @@
        "9    Batched IO buffer defrag count    11558850  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +388,7 @@
        "3140  physical read total IO requests       1638740086 01:00:11  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +511,7 @@
        "max    42662.000000     2.000000  3.380895e+14         0 days 01:01:30"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +713,7 @@
        "4496        physical read total bytes  162388210925056 01:00:06  1.621358e+14  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +748,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +895,7 @@
        "max    3.106217e+14  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1029,7 @@
        "max    3.380434e+14  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1128,6 +1099,17 @@
     "plt.title('physical read total bytes')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "\n",
+    "1. For each release the histogram shows two distinct peaks, corresponding to the two database instances. As some applications run on one of the database host, it is plausible that User I/O is different between the two instances.\n",
+    "\n",
+    "2. For each database instance, both statistics (User I/O total number of requests, and total number of bytes physically read) unambiguously show higer values since deployment of the new release."
    ]
   }
  ],
